# ray

./: .gitignore  AMAZON_EC2.txt  AUTHORS  AnalyzeAssembly.py  AvlTree.h  BubbleData.h  BubbleTool.cpp  BubbleTool.h  BufferedData.cpp  BufferedData.h  CMakeLists.txt  COLOR_SPACE  ChangeLog  ChangeLog.txt  Chooser.cpp  Chooser.h  ChooserData.h  ColorSpaceDecoder.cpp  ColorSpaceDecoder.h  ColorSpaceLoader.cpp  ColorSpaceLoader.h  CoverageDistribution.cpp  CoverageDistribution.h  DESIGN  DepthFirstSearchData.h  Direction.cpp  Direction.h  DistributionData.cpp  DistributionData.h  DoxygenConfigurationFile  Edge.cpp  Edge.h  EdgesExtractor.cpp  EdgesExtractor.h  ErrorSimulator.cpp  ErrorSimulator.h  ExtensionData.h  FUNDING  FusionData.h  HumanChromosome1-qsub.sh  (+105 more)
RayPlatform/: AUTHORS  CMakeLists.txt  DoxygenConfigurationFile  Makefile  Makefile.shared-gcc  README  common.mk
RayPlatform/Documentation/: ComputeCore.txt  Infiniband.txt  MPI.txt  Message-Routing.txt  hyperthreading.txt  plugins.txt  profiling.txt
RayPlatform/communication/: BufferedData.cpp  BufferedData.h  Message.cpp  Message.h  MessageRouter.cpp  MessageRouter.h  MessagesHandler.cpp  MessagesHandler.h  VirtualCommunicator.cpp  VirtualCommunicator.h  mpi_tags.cpp  mpi_tags.h
RayPlatform/core/: ComputeCore.cpp  ComputeCore.h  CorePlugin.cpp  CorePlugin.h  master_modes.cpp  master_modes.h  slave_modes.cpp  slave_modes.h  statistics.cpp  types.h
RayPlatform/handlers/: MasterModeHandler.cpp  MasterModeHandler.h  MessageTagHandler.cpp  MessageTagHandler.h  SlaveModeHandler.cpp  SlaveModeHandler.h
RayPlatform/memory/: ChunkAllocatorWithDefragmentation.cpp  ChunkAllocatorWithDefragmentation.h  DefragmentationGroup.cpp  DefragmentationGroup.h  MyAllocator.cpp  MyAllocator.h  ReusableMemoryStore.h  RingAllocator.cpp  RingAllocator.h  allocator.cpp  allocator.h  malloc_types.cpp  malloc_types.h
RayPlatform/plugins/: CorePlugin.cpp  CorePlugin.h  RegisteredPlugin.cpp  RegisteredPlugin.h
RayPlatform/profiling/: Derivative.cpp  Derivative.h  Profiler.cpp  Profiler.h  TickLogger.cpp  TimePrinter.h
RayPlatform/routing/: GraphImplementation.h  GraphImplementationDeBruijn.h  GraphImplementationKautz.h  GraphImplementationRandom.cpp
RayPlatform/scheduling/: SwitchMan.cpp  SwitchMan.h  SwitchMan_adapters.cpp  SwitchMan_adapters.h  TaskCreator.cpp  VirtualProcessor.cpp  VirtualProcessor.h  Worker.h
RayPlatform/scripting/: ScriptEngine.cpp  ScriptEngine.h
RayPlatform/structures/: MyHashTable.h  MyHashTableIterator.h  MyStack.h  SplayNode.h  SplayTree.h  SplayTreeIterator.h  StaticVector.cpp  StaticVector.h
code/: ArrayOfReads.cpp  ArrayOfReads.h  BubbleData.h  BubbleTool.cpp  BubbleTool.h  BufferedData.cpp  BufferedData.h  BzReader.cpp  BzReader.h  CMakeLists.txt  Chooser.cpp  Chooser.h  ChooserData.h  CodingStyle.txt  ColorSpaceDecoder.cpp  ColorSpaceLoader.cpp  ColorSpaceLoader.h  CoverageDistribution.cpp  CoverageDistribution.h  DepthFirstSearchData.cpp  DepthFirstSearchData.h  Direction.cpp  Direction.h  DistributionData.cpp  DistributionData.h  DoxygenConfigurationFile  EarlyStoppingTechnology.cpp  EarlyStoppingTechnology.h  EdgesExtractor.cpp  EdgesExtractor.h  ErrorSimulator.cpp  ErrorSimulator.h  ExtensionData.cpp  ExtensionData.h  ExtensionElement.cpp  ExtensionElement.h  FastaLoader.cpp  FastaLoader.h  FastqBz2Loader.cpp  FastqBz2Loader.h  (+143 more)
code/Amos/: Amos.cpp  Amos.h  Makefile
code/Application/: Makefile
code/CoverageGatherer/: CoverageDistribution.cpp  CoverageDistribution.h  CoverageGatherer.cpp  CoverageGatherer.h  Makefile
code/EdgePurger/: EdgePurger.cpp  EdgePurger.h  EdgePurgerWorker.h  Makefile
code/Example/: Example.h  Makefile
code/FusionData/: FusionData.cpp  FusionData.h  Makefile
code/FusionTaskCreator/: FusionTaskCreator.cpp  FusionTaskCreator.h  FusionWorker.cpp  FusionWorker.h  Makefile
code/GeneOntology/: GeneOntology.cpp  GeneOntology.h  KeyEncoder.cpp  KeyEncoder.h  Makefile  types.h
code/GenomeNeighbourhood/: GenomeNeighbourhood.cpp  GenomeNeighbourhood.h  Makefile  Neighbour.cpp  Neighbour.h  NeighbourPair.cpp  NeighbourPair.h
code/JoinerTaskCreator/: JoinerTaskCreator.cpp  JoinerTaskCreator.h  JoinerWorker.cpp  JoinerWorker.h  Makefile  PathMaster.cpp  PathMaster.h
code/KmerAcademyBuilder/: BloomFilter.cpp  BloomFilter.h  Kmer.cpp  Kmer.h  KmerAcademyBuilder.cpp  KmerAcademyBuilder.h  Makefile
code/MachineHelper/: MachineHelper.cpp  MachineHelper.h  Makefile
code/MessageProcessor/: Makefile  MessageProcessor.cpp  MessageProcessor.h
code/Mock/: CarriageableItem.h  Logger.cpp  Logger.h  Makefile  Mock.cpp  Mock.h  Parameters.cpp  Parameters.h  common_functions.cpp  common_functions.h  constants.h
code/NetworkTest/: Makefile  NetworkTest.cpp  NetworkTest.h
code/Partitioner/: Makefile  Partitioner.cpp  Partitioner.h
code/PathEvaluator/: Makefile  PathEvaluator.cpp  PathEvaluator.h
code/Platform/: Makefile
code/Scaffolder/: Makefile  Scaffolder.cpp  Scaffolder.h  ScaffoldingAlgorithm.cpp  ScaffoldingAlgorithm.h  ScaffoldingEdge.cpp  ScaffoldingEdge.h  ScaffoldingLink.cpp  ScaffoldingLink.h  ScaffoldingVertex.cpp  ScaffoldingVertex.h  SummarizedLink.cpp  SummarizedLink.h
code/Searcher/: ColorSet.cpp  ColorSet.h  ColoredPeakFinder.cpp  ColoredPeakFinder.h  ContigHit.cpp  ContigHit.h  ContigSearchEntry.cpp  ContigSearchEntry.h  Makefile  (+10 more)
scripts/: 0mix11-abyss.sh  0mix11-euler-sr.sh  0mix11-parameters.sh  0mix11-ray.sh  0mix11-velvet.sh  0mix12-abyss.sh  0mix12-euler-sr.sh  0mix12-ray.sh  0mix12-velvet.sh  0mix13-abyss.sh  0mix13-cabog.sh  0mix13-euler-sr.sh  0mix13-newbler.sh  0mix13-parameters.sh  0mix13-ray.sh  0mix13-velvet.sh  0mix14-abyss.sh  0mix14-euler-sr.sh  0mix14-ray.sh  0mix14-velvet.sh  0mix2-parameters.sh  0mix21-abyss.sh  0mix21-euler-sr.sh  0mix21-ray.sh  0mix21-velvet.sh  0mix22-abyss.sh  0mix22-euler-sr.sh  0mix22-newbler.sh  0mix22-ray.sh  0mix22-velvet.sh  0mix23-abyss.sh  0mix23-euler-sr.sh  0mix23-ray.sh  0mix23-velvet.sh  0mix31-abyss.sh  0mix31-euler-sr.sh  0mix31-parameters.sh  0mix31-ray.sh  0mix31-velvet.sh  0mix32-abyss.sh  (+117 more)
(+1314 files in other folders)
