cmake_minimum_required(VERSION 2.6 )
set( CMAKE_CXX_COMPILER mpicxx )
set( CMAKE_CXX_FLAGS "-O3 -Wall -std=c++98" )
include_directories( . )
add_executable( Ray 


code/Amos/Amos.cpp
code/application_core/Machine.cpp
code/application_core/ray_main.cpp
code/SpuriousSeedAnnihilator/AnnihilationWorker.cpp
code/SpuriousSeedAnnihilator/SeedFilteringWorkflow.cpp
code/SpuriousSeedAnnihilator/SpuriousSeedAnnihilator.cpp
code/SpuriousSeedAnnihilator/AnnotationFetcher.cpp
code/SpuriousSeedAnnihilator/AttributeFetcher.cpp
code/CoverageGatherer/CoverageDistribution.cpp
code/CoverageGatherer/CoverageGatherer.cpp
code/EdgePurger/EdgePurger.cpp
code/EdgePurger/EdgePurgerWorker.cpp
code/Example/Example.cpp
code/FusionData/FusionData.cpp
code/FusionTaskCreator/FusionTaskCreator.cpp
code/FusionTaskCreator/FusionWorker.cpp
code/GeneOntology/GeneOntology.cpp
code/GeneOntology/KeyEncoder.cpp
code/GenomeNeighbourhood/GenomeNeighbourhood.cpp
code/GenomeNeighbourhood/Neighbour.cpp
code/GenomeNeighbourhood/NeighbourPair.cpp
code/JoinerTaskCreator/JoinerTaskCreator.cpp
code/JoinerTaskCreator/JoinerWorker.cpp
code/KmerAcademyBuilder/BloomFilter.cpp
code/KmerAcademyBuilder/Kmer.cpp
code/KmerAcademyBuilder/KmerAcademyBuilder.cpp
code/Library/Library.cpp
code/Library/LibraryPeakFinder.cpp
code/Library/LibraryWorker.cpp
code/MachineHelper/MachineHelper.cpp
code/MessageProcessor/MessageProcessor.cpp
code/Mock/Mock.cpp
code/Mock/Parameters.cpp
code/Mock/common_functions.cpp
code/NetworkTest/NetworkTest.cpp
code/Partitioner/Partitioner.cpp
code/PathEvaluator/PathEvaluator.cpp
code/Scaffolder/Scaffolder.cpp
code/Scaffolder/ScaffoldingAlgorithm.cpp
code/Scaffolder/ScaffoldingEdge.cpp
code/Scaffolder/ScaffoldingLink.cpp
code/Scaffolder/ScaffoldingVertex.cpp
code/Scaffolder/SummarizedLink.cpp
code/Searcher/ColorSet.cpp
code/Searcher/ColoredPeakFinder.cpp
code/Searcher/ContigHit.cpp
code/Searcher/ContigSearchEntry.cpp
code/Searcher/DistributionWriter.cpp
code/Searcher/QualityCaller.cpp
code/Searcher/SearchDirectory.cpp
code/Searcher/Searcher.cpp
code/Searcher/VirtualKmerColor.cpp
code/SeedExtender/BubbleTool.cpp
code/SeedExtender/Chooser.cpp
code/SeedExtender/DepthFirstSearchData.cpp
code/SeedExtender/Direction.cpp
code/SeedExtender/ExtensionData.cpp
code/SeedExtender/ExtensionElement.cpp
code/SeedExtender/NovaEngine.cpp
code/SeedExtender/OpenAssemblerChooser.cpp
code/SeedExtender/ReadFetcher.cpp
code/SeedExtender/SeedExtender.cpp
code/SeedExtender/TipWatchdog.cpp
code/SeedExtender/VertexMessenger.cpp
code/SeedingData/GraphPath.cpp
code/SeedingData/SeedWorker.cpp
code/SeedingData/SeedingData.cpp
code/SequencesIndexer/IndexerWorker.cpp
code/SequencesIndexer/PairedRead.cpp
code/SequencesIndexer/ReadAnnotation.cpp
code/SequencesIndexer/SequencesIndexer.cpp
code/SequencesLoader/ArrayOfReads.cpp
code/SequencesLoader/BzReader.cpp
code/SequencesLoader/ColorSpaceDecoder.cpp
code/SequencesLoader/ColorSpaceLoader.cpp
code/SequencesLoader/ExportLoader.cpp
code/SequencesLoader/FastaBz2Loader.cpp
code/SequencesLoader/FastaGzLoader.cpp
code/SequencesLoader/FastaLoader.cpp
code/SequencesLoader/FastaLoaderForReads.cpp
code/SequencesLoader/FastqBz2Loader.cpp
code/SequencesLoader/FastqGzLoader.cpp
code/SequencesLoader/FastqLoader.cpp
code/SequencesLoader/Loader.cpp
code/SequencesLoader/LoaderFactory.cpp
code/SequencesLoader/LoaderInterface.cpp
code/SequencesLoader/Read.cpp
code/SequencesLoader/SequencesLoader.cpp
code/SequencesLoader/SffLoader.cpp
code/TaxonomyViewer/GenomeToTaxonLoader.cpp
code/TaxonomyViewer/TaxonNameLoader.cpp
code/TaxonomyViewer/TaxonomicTreeLoader.cpp
code/TaxonomyViewer/TaxonomyViewer.cpp
code/VerticesExtractor/GridTable.cpp
code/VerticesExtractor/GridTableIterator.cpp
code/VerticesExtractor/Vertex.cpp
code/VerticesExtractor/VerticesExtractor.cpp
RayPlatform/communication/MessageRouter.cpp
RayPlatform/communication/BufferedData.cpp
RayPlatform/communication/Message.cpp
RayPlatform/communication/MessagesHandler.cpp
RayPlatform/communication/VirtualCommunicator.cpp
RayPlatform/communication/mpi_tags.cpp
RayPlatform/communication/MessageQueue.cpp
RayPlatform/core/OperatingSystem.cpp
RayPlatform/core/ComputeCore.cpp
RayPlatform/core/master_modes.cpp
RayPlatform/core/slave_modes.cpp
RayPlatform/core/MiniRank.cpp
RayPlatform/core/statistics.cpp
RayPlatform/cryptography/crypto.cpp
RayPlatform/handlers/MasterModeExecutor.cpp
RayPlatform/handlers/MessageTagExecutor.cpp
RayPlatform/handlers/SlaveModeExecutor.cpp
RayPlatform/memory/ReusableMemoryStore.cpp
RayPlatform/memory/MyAllocator.cpp
RayPlatform/memory/ChunkAllocatorWithDefragmentation.cpp
RayPlatform/memory/DefragmentationGroup.cpp
RayPlatform/memory/DefragmentationLane.cpp
RayPlatform/memory/RingAllocator.cpp
RayPlatform/memory/allocator.cpp
RayPlatform/plugins/RegisteredPlugin.cpp
RayPlatform/plugins/CorePlugin.cpp
RayPlatform/profiling/Derivative.cpp
RayPlatform/profiling/Profiler.cpp
RayPlatform/profiling/TickLogger.cpp
RayPlatform/profiling/TimePrinter.cpp
RayPlatform/routing/GraphImplementation.cpp
RayPlatform/routing/ConnectionGraph.cpp
RayPlatform/routing/GraphImplementationComplete.cpp
RayPlatform/routing/GraphImplementationExperimental.cpp
RayPlatform/routing/Polytope.cpp
RayPlatform/routing/GraphImplementationDeBruijn.cpp
RayPlatform/routing/GraphImplementationKautz.cpp
RayPlatform/routing/Torus.cpp
RayPlatform/routing/GraphImplementationGroup.cpp
RayPlatform/routing/GraphImplementationRandom.cpp
RayPlatform/scheduling/SwitchMan.cpp
RayPlatform/scheduling/TaskCreator.cpp
RayPlatform/scheduling/VirtualProcessor.cpp
RayPlatform/structures/StaticVector.cpp

)
