# primary Makefile.am
# Author: Sébastien Boisvert
# Centre de recherche en infectiologie, Université Laval
# Copyright 2010, or so

SUBDIRS = code
docdir = $(datadir)/doc/$(PACKAGE)
dist_doc_DATA= README AUTHORS MPI COLOR_SPACE ChangeLog DESIGN FUNDING COPYING INSTALL PAIRED_READS RELEASE_PROCEDURE NEWS logo/logo.svg 

